--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            width: 120vw;
-            height: 120vh;
+            width: 100%;
             transform: translate(-50%, -50%);
             pointer-events: none;
             opacity: 0.05;
@@ -578,13 +577,16 @@
 
     <div id="mainPageContent" class="d-none">
 
-        <div id="landing-video-section">
+        <!-- <div id="landing-video-section">
             <iframe id="bg-video"
                 src="https://www.youtube.com/embed/rTbdOhFFK4k?autoplay=1&mute=1&loop=1&controls=0&playlist=rTbdOhFFK4k&modestbranding=1&showinfo=0&rel=0"
                 frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
             </iframe>
-        </div>
+        </div> -->
 
+        <div id="landing-video-section">
+            <img id="bg-video" src="WebsiteVideo.gif" alt="Landing Background" />
+        </div>
 
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
