--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
 
         #bg-video {
             position: absolute;
-            top: 50%;
-            left: 50%;
+            top: 0;
+            left: 0;
             width: 100%;
-            transform: translate(-50%, -50%);
-            pointer-events: none;
+            height: 100%;
+            object-fit: cover;
             opacity: 0.05;
             z-index: -2;
-            border: none;
         }
 
         .navbar {
@@ -577,13 +576,6 @@
 
     <div id="mainPageContent" class="d-none">
 
-        <!-- <div id="landing-video-section">
-            <iframe id="bg-video"
-                src="https://www.youtube.com/embed/rTbdOhFFK4k?autoplay=1&mute=1&loop=1&controls=0&playlist=rTbdOhFFK4k&modestbranding=1&showinfo=0&rel=0"
-                frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
-            </iframe>
-        </div> -->
-
         <div id="landing-video-section">
             <img id="bg-video" src="WebsiteVideo.gif" alt="Landing Background" />
         </div>
@@ -779,7 +771,8 @@
                     <input type="text" name="event" placeholder="Event Type" required>
                 </div>
                 <div class="form-row">
-                    <input type="date" name="date" required>
+                    <input type="text" id="date" name="date" required placeholder="Enter Event Date"
+                        onfocus="(this.type='date')" onblur="if(this.value===''){this.type='text'}">
                     <input type="text" name="instagram" placeholder="Instagram Profile (optional)">
                 </div>
                 <div class="form-row">
